1.3.8RC4-6 fix backports